discussion/kv_engine/148184/148184_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

dcpdrain: Ignore SIGPIPE

The dcpdrain process can observe a SIGPIPE if it attempts to send a
buffer ack message when the server has already closed the
connection. This causes the process to terminate and no progress
printed.

Ignore SIGPIPE, then we get a clean error message and still see
progress:

    Other side closed connection: 34
    Took 85698 ms - 10000000 mutations with a total of 820020472 bytes received (9421kB/s)

Change-Id: I887ea2cd466994898d193e1b8fa665ddcd96517c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-03-10 13:35:34.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-10 14:52:37.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7552/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/programs/dcpdrain/dcpdrain.cc:544:16: error: use of undeclared identifier "SIGPIPE" [clang-diagnostic-error]
    if (signal(SIGPIPE, SIG_IGN) == SIG_ERR) {
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/programs/dcpdrain/dcpdrain.cc:544:25: error: use of undeclared identifier "SIG_IGN" [clang-diagnostic-error]
    if (signal(SIGPIPE, SIG_IGN) == SIG_ERR) {
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/programs/dcpdrain/dcpdrain.cc:544:37: error: use of undeclared identifier "SIG_ERR" [clang-diagnostic-error]
    if (signal(SIGPIPE, SIG_IGN) == SIG_ERR) {
                                    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7552/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/programs/dcpdrain/dcpdrain.cc:544:16:
error: use of undeclared identifier "SIGPIPE" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7552/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34164/ : FAILURE

Compile error at ..\kv_engine\programs\dcpdrain\dcpdrain.cc(544): error C2065: "SIGPIPE": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34164/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29342/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/programs/dcpdrain/dcpdrain.cc:544:16:
error: use of undeclared identifier "SIGPIPE"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29342/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9310/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17070/ : FAILURE

Compile error at [2021-03-10T14:52:17.329Z] ../kv_engine/programs/dcpdrain/dcpdrain.cc:544:16:
error: use of undeclared identifier "SIGPIPE"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17070/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9167/ : FAILURE

Compile error at [2021-03-10T14:48:23.486Z] ../kv_engine/programs/dcpdrain/dcpdrain.cc:544:16:
error: ?SIGPIPE? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9167/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9521/ : FAILURE

Compile error at [2021-03-10T14:46:36.137Z] ../kv_engine/programs/dcpdrain/dcpdrain.cc:544:16:
error: use of undeclared identifier "SIGPIPE"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9521/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6091/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8227/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
